Graal: Work around an "unknown module" warning
See [1].

[1]: https://github.com/oracle/graal/issues/4671

Signed-off-by: Sebastian Schuberth <sschuberth@gmail.com>